--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -177,6 +177,8 @@
 .project-item:hover {
   transform: translateY(-10px);
   box-shadow: 0 6px 10px rgba(0, 0, 0, 0.15);
+  cursor: default;
+
 }
 
 .project-content h3 {
