--- a/src/pages/WebDevelopment.css
+++ b/src/pages/WebDevelopment.css
@@ -73,43 +73,39 @@
     margin-bottom: 20px;
   }
   
-  /* Cards */
-  .service-card {
-    display: flex;
-    flex-direction: column;
-    height: 100%;
-  }
-  
-  .service-icon {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 10px;
-  }
-  
-  .MuiCardMedia-root {
-    transition: transform 0.3s ease-in-out;
-  }
-  
-  .service-card:hover .MuiCardMedia-root {
-    transform: scale(1.05);
-  }
-  
-  .MuiCardContent-root {
-    flex-grow: 1;
-    display: flex;
-    flex-direction: column;
-  }
-  
-  .MuiCardContent-root h3 {
-    margin-bottom: 10px;
-    text-align: center;
-  }
-  
-  .card-description {
-    flex-grow: 1;
-    text-align: center;
-  }
+ /* Cards */
+.service-card {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.service-icon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 10px;
+}
+
+.MuiCardMedia-root {
+  transition: transform 0.3s ease-in-out;
+}
+
+.service-card:hover .MuiCardMedia-root {
+  transform: scale(1.05);
+}
+
+.card-content {
+  flex-grow: 1;
+}
+
+.card-content h3 {
+  margin-bottom: 10px;
+}
+
+.card-description {
+  flex-grow: 1;
+}
   
   /* CTA Section */
   .cta-section {
